general settings crud apis
