# app/Models/GeneralSetting.php
@@ -2,9 +2,10 @@
 
 namespace App\Models;
 
-use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Casts\Attribute;
 use Illuminate\Database\Eloquent\Relations\MorphTo;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 
 class GeneralSetting extends Model
 {
@@ -31,8 +32,36 @@ class GeneralSetting extends Model
         'settingable_type',
     ];
 
+    // Relationships
     public function settingable(): MorphTo
     {
         return $this->morphTo();
+    }
+    
+    // Scopes 
+    public function value(): Attribute
+    {
+        return Attribute::make(
+            get: fn($value) => json_decode($value, true),
+        );
+    }
+
+    // Scopes
+    public function scopeFilter($query, $filters = [])
+    {
+        return $query->when($filters, function ($query, $filters) {
+            return $query
+                ->when($filters['key'] ?? false, fn($q, $key) => $q->where('key', $key))
+                ->when($filters['id'] ?? false, fn($q, $id) => $q->where('id', $id))
+                ->when($filters['value'] ?? false, fn($q, $value) => $q->where('value', $value))
+                ->when($filters['type'] ?? false, fn($q, $type) => $q->where('type', $type));
+        });
+    }
+
+    public function scopeSort($query, $sort = [])
+    {
+        return $query->when($sort, function ($query, $sort) {
+            return $query->orderBy($sort['column'], $sort['direction']);
+        });
     }
 }
